testing slider button alignment issue on iphone

--- a/src/components/Slider/Slider.module.scss
+++ b/src/components/Slider/Slider.module.scss
@@ -60,7 +60,7 @@
   height: 2rem; /* adjust to desired height */
   line-height: 2rem; /* added */
   text-align: center; /* added */
-  transform: translateY(-50%);
+  transform: translateY(-70%);
 
   &:hover {
     background-color: rgba(0, 0, 0, 0.7);
